Fixed style problems with perfect-scrollbar + markdown

--- a/src/app/components/file-viewer/file-viewer.component.scss
+++ b/src/app/components/file-viewer/file-viewer.component.scss
@@ -14,7 +14,7 @@
   padding: 20px 10px 20px 20px;
   background: azure;
   position: relative;
-
+  max-height: calc(100% - 85px);
   flex: 1 0 0;
   box-shadow: inset 0 0 10px 2px #303030;
 
